--- a/components/rule-mgt/pom.xml
+++ b/components/rule-mgt/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.wso2.carbon.identity.framework</groupId>
         <artifactId>identity-framework</artifactId>
-        <version>7.5.99-SNAPSHOT</version>
+        <version>7.5.123-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -36,5 +36,7 @@
     <url>http://wso2.org</url>
 
     <modules>
+        <module>org.wso2.carbon.identity.rule.management</module>
+        <module>org.wso2.carbon.identity.rule.metadata</module>
     </modules>
 </project>
